@startuml Transition Classes

title Transition Classes

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam ArrowColor #4a6fa5
skinparam ClassBorderColor #4a6fa5
skinparam ClassBackgroundColor #e8f0fe
skinparam ClassHeaderBackgroundColor #c5d8f5

abstract class BaseTransition {
    + transition_logits : ndarray
    --
    + {static} from_params(transition_matrix)
    + {abstract} transition_matrix(t, ys, xs)
    + {abstract} step(t, ys, xs)
    + update_param(name, value, index)
}

note top of BaseTransition
  Logits are converted to a row-stochastic
  matrix via row-wise softmax.
end note

class StaticTransition {
    + transition_logits : ndarray
    --
    + step(t, ys, xs)
    + transition_matrix(t, ys, xs)
}

note right of StaticTransition
  Transition matrix is constant
  across all time steps.
end note

class StaticTransitionHigherOrder {
    + transition_logits : ndarray
    + order : int
    --
    + step(t, ys, xs)
    + transition_matrix(t, ys, xs)
    - validate_transition_logits(num_states)
}

note right of StaticTransitionHigherOrder
  Augments state space to K^order states
  to model higher-order Markov chains.
end note

BaseTransition <|-- StaticTransition
BaseTransition <|-- StaticTransitionHigherOrder

@enduml
